fixed dark mode text work:hover

--- a/assets/scss/bars-menu.scss
+++ b/assets/scss/bars-menu.scss
@@ -6,6 +6,28 @@ nav {
         @include media( "screen", ">minWidth", "<bp2Width" ){
             display: block;
         }
+        
+        .theme {
+            border: 1px solid $_primary;
+            border-radius: 50px;
+            cursor: pointer;
+            height: 30px;
+            transition: .3s ease-in-out;
+            width: 60px;
+            z-index: 999;
+    
+            .circle {
+                background: $_primary;
+                border-radius: 50%;
+                display: inline-block;
+                height: 22px;
+                left: 3px;
+                position: relative;
+                top: 3px;
+                transition: .3s ease-in-out;
+                width: 22px;
+            }
+        }
     }
 
     label .menu {
