--- a/assets/scss/works.scss
+++ b/assets/scss/works.scss
@@ -76,6 +76,7 @@
         figcaption.img__text {
             align-items: flex-start;
             background: $_white;
+            color: var(--gray);
             display: flex;
             flex-direction: column;
             height: 100%;
